# emclient-unity

./: .gitignore  README.md
AgoraChatSDK/CWrapper/: CMakeLists.txt  main.cpp
AgoraChatSDK/CWrapper/CWrapper/include/: Api_decorator.h  CWrapper.h  CWrapper_import.h
AgoraChatSDK/CWrapper/CWrapper/src/: CWrapper.cpp
AgoraChatSDK/CWrapper/Wrapper/Wrapper_Android/JavaWrapperDemo/: settings.gradle
AgoraChatSDK/CWrapper/Wrapper/Wrapper_Android/JavaWrapperDemo/JavaWrapper/: build.gradle
AgoraChatSDK/CWrapper/Wrapper/Wrapper_Android/Wrapper/: build.sh
AgoraChatSDK/CWrapper/Wrapper/Wrapper_Android/WrapperDemo/: settings.gradle
AgoraChatSDK/CWrapper/Wrapper/Wrapper_Common/build_mac/: cplib.sh  cplib_arm64.sh  cplib_universal.sh  remove_lnk.sh
AgoraChatSDK/CWrapper/Wrapper/Wrapper_Common/build_win/: Wrapper.sln  cwrapper.gyp  gen_cwrapper_winsln.bat
AgoraChatSDK/CWrapper/Wrapper/Wrapper_Common/common_wrapper/: common_cwrapper.cpp  common_wrapper.h  common_wrapper_internal.h
AgoraChatSDK/CWrapper/Wrapper/Wrapper_Common/sdk_wrapper/: callbacks.h  chat_manager.cpp  client.cpp  contact_manager.cpp  conversation_manager.cpp  core_dump.cpp  core_dump.h  group_manager.cpp  models.cpp  models.h  presence_manager.cpp  push_manager.cpp  room_manager.cpp  sdk_wrapper.h  sdk_wrapper_internal.h  thread_manager.cpp  tool.cpp  tool.h  userinfo_manager.cpp
AgoraChatSDK/CWrapper/Wrapper/Wrapper_iOS/: download_ios_sdk.sh
AgoraChatSDK/CWrapper/Wrapper/Wrapper_iOS/OCWrapperDemo.xcworkspace/: contents.xcworkspacedata
(+1629 files in other folders)
